codegen/ui_tests/non_clonable_second.stderr
error[E0277]: the trait bound `NonClonable: Clone` is not satisfied
  --> ui_tests/non_clonable_second.rs:12:27
   |
12 | pub fn test_fn(a: u32, b: NonClonable) -> bool {
   |                           ^^^^^^^^^^^
   |                           |
   |                           the trait `Clone` is not implemented for `NonClonable`
   |                           required by a bound introduced by this call
   |
note: required by a bound in `Dynamic::cast`
  --> $WORKSPACE/src/types/dynamic.rs
   |
   |     pub fn cast<T: Any + Clone>(self) -> T {
   |                          ^^^^^ required by this bound in `Dynamic::cast`
help: consider annotating `NonClonable` with `#[derive(Clone)]`
   |
 4 + #[derive(Clone)]
 5 | struct NonClonable {
   |
